docs: home page

--- a/projects/ngxpert/input-otp/src/lib/components/input-otp/input-otp.component.html
+++ b/projects/ngxpert/input-otp/src/lib/components/input-otp/input-otp.component.html
@@ -1,6 +1,6 @@
 <div
   #containerRef
-  [class]="containerClassName || ''"
+  [class]="containerClass || ''"
   data-input-otp-container
   [style]="rootStyle"
 >
@@ -24,7 +24,6 @@
       [style]="inputStyle"
       [maxLength]="maxLength()"
       [formControl]="formControl"
-      (paste)="onPaste($event)"
       (mouseenter)="onMouseEnter()"
       (mouseleave)="onMouseLeave()"
       (focus)="onFocus()"
