refactor: use property binding, docs, remove directive

--- a/projects/ngxpert/input-otp/src/lib/components/input-otp/input-otp.component.html
+++ b/projects/ngxpert/input-otp/src/lib/components/input-otp/input-otp.component.html
@@ -20,9 +20,9 @@
       [attr.data-input-otp-placeholder-shown]="formControl.value?.length === 0 || undefined"
       [attr.data-input-otp-mss]="mirrorSelectionStart() || undefined"
       [attr.data-input-otp-mse]="mirrorSelectionEnd() || undefined"
-      [attr.inputMode]="inputMode()"
-      [attr.pattern]="pattern()"
-      [attr.aria-placeholder]="placeholder()"
+      [inputMode]="inputMode()"
+      [pattern]="pattern() ?? ''"
+      [ariaPlaceholder]="placeholder()"
       [style]="inputStyle()"
       [maxLength]="maxLength()"
       [formControl]="formControl"
