--- a/src/app/components/showcase/showcase.component.html
+++ b/src/app/components/showcase/showcase.component.html
@@ -13,25 +13,39 @@
     name="otp"
     [disabled]="disabled()"
   >
-    <div class="flex gap-2">
-      @for (slot of otp.slots().slice(0, 3); track $index) {
+    <div class="flex">
+      @for (
+        slot of otp.slots().slice(0, 3);
+        track $index;
+        let first = $first;
+        let last = $last
+      ) {
         <app-slot
           [isActive]="slot.isActive"
           [char]="slot.char"
           [placeholderChar]="slot.placeholderChar"
           [hasFakeCaret]="slot.hasFakeCaret"
           [animateIdx]="$index"
+          [first]="first"
+          [last]="last"
         />
       }
 
       <app-fake-dash />
 
-      @for (slot of otp.slots().slice(3, 6); track $index + 3) {
+      @for (
+        slot of otp.slots().slice(3, 6);
+        track $index + 3;
+        let last = $last;
+        let first = $first
+      ) {
         <app-slot
           [isActive]="slot.isActive"
           [char]="slot.char"
           [placeholderChar]="slot.placeholderChar"
           [hasFakeCaret]="slot.hasFakeCaret"
+          [last]="last"
+          [first]="first"
         />
       }
     </div>
