refactor: update components to use input() for reactive properties and improve class bindings

--- a/src/app/components/copy-button/copy-button.component.html
+++ b/src/app/components/copy-button/copy-button.component.html
@@ -2,7 +2,7 @@
   appUiButton
   size="icon"
   variant="ghost"
-  [cdkCopyToClipboard]="textToCopy"
+  [cdkCopyToClipboard]="textToCopy()"
   (cdkCopyToClipboardCopied)="copied()"
 >
   @if (isCopied) {
