--- a/src/app/components/slot/slot.component.html
+++ b/src/app/components/slot/slot.component.html
@@ -2,9 +2,9 @@
   [ngClass]="[
     'relative w-10 md:w-20 h-14 md:h-28 text-[2rem] md:text-[4rem] flex items-center justify-center border-border border-y border-r transition-all [transition-duration:300ms] outline outline-0 outline-accent-foreground/20',
     'group-hover:border-accent-foreground/20 group-focus-within:!border-accent-foreground/50',
-    isActive ? 'outline-4 outline-accent-foreground' : '',
-    first ? 'border-l rounded-l-md' : '',
-    last ? 'rounded-r-md' : '',
+    isActive() ? 'outline-4 outline-accent-foreground' : '',
+    first() ? 'border-l rounded-l-md' : '',
+    last() ? 'rounded-r-md' : '',
   ]"
 >
   <div
@@ -22,7 +22,7 @@
     }
   </div>
 
-  @if (hasFakeCaret) {
+  @if (hasFakeCaret()) {
     <div [class]="willAnimateCaret ? 'lg:opacity-0 lg:animate-fade-in' : ''">
       <app-fake-caret />
     </div>
