--- a/projects/ngxpert/input-otp/src/lib/components/input-otp/input-otp.component.html
+++ b/projects/ngxpert/input-otp/src/lib/components/input-otp/input-otp.component.html
@@ -4,7 +4,7 @@
   data-input-otp-container
   [style]="rootStyle()"
 >
-  <ng-content></ng-content>
+  <ng-content />
   <div
     [style]="{
       position: 'absolute',
