--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
 
       <app-showcase
         [class]="cn(fadeUpClassname, 'lg:motion-safe:[animation-delay:1000ms]')"
-      ></app-showcase>
+      />
 
       <app-page-header-description
         [class]="cn(fadeUpClassname, 'lg:motion-safe:[animation-delay:3000ms]')"
@@ -68,10 +68,10 @@
     <div
       [class]="cn(fadeUpClassname, 'lg:motion-safe:[animation-delay:3000ms]')"
     >
-      <app-code></app-code>
+      <app-code />
     </div>
   </div>
 </main>
 <div [class]="cn(fadeUpClassname, 'lg:motion-safe:[animation-delay:3000ms]')">
-  <app-site-footer></app-site-footer>
+  <app-site-footer />
 </div>
