fix: remove unwanted id from host

--- a/projects/ngxpert/input-otp/src/lib/components/input-otp/input-otp.component.html
+++ b/projects/ngxpert/input-otp/src/lib/components/input-otp/input-otp.component.html
@@ -17,7 +17,9 @@
       data-input-otp
       [id]="id() ?? idNextId"
       [name]="name() ?? ''"
-      [attr.data-input-otp-placeholder-shown]="formControl.value?.length === 0 || undefined"
+      [attr.data-input-otp-placeholder-shown]="
+        formControl.value?.length === 0 || undefined
+      "
       [attr.data-input-otp-mss]="mirrorSelectionStart() || undefined"
       [attr.data-input-otp-mse]="mirrorSelectionEnd() || undefined"
       [inputMode]="inputMode()"
